Made some minor changes to the appearance

--- a/index.html
+++ b/index.html
@@ -14,14 +14,20 @@
 </head>
 
 <body>
-    <h1>GifTastic!!!!!!!!</h1>
-    <br>
+    
     <div class="container">
+        <div class ="row" style = "margin-bottom: 20px">
+                <h1>GifTastic!!!!!!!!</h1>
+        </div>
         <div class="row" style="margin-bottom: 20px">
-            <div class="col-12" id="button-place"></div>
+            <div class = col-2>
+
+            </div>
+            <div class="col-8" id="button-place"></div>
+            <div class = "col-2"></div>
         </div>
         <div class="row">
-            <div class="col-6">
+            <div class="col-6" style = "border: 20px">
                 <div id="gif-place"></div>
             </div>
             <div class="col-6">
